Added Delete channel Route
